2008-04-18  Bruno Haible  <bruno@clisp.org>

	* src/integer/cl_I.h (FN_MSD1_mask, FN_MSD2_mask, FN_MSD3_mask):
	Define without tag bits. Fixes a bug in FN_to_NDS on platforms where
	FN_maxlength > 1.
	Reported by Richard Kreckel.

2008-04-07  Alexei Sheplyakov  <varg@theor.jinr.ru>

	* configure.ac: create subdirectory to hold auto-generated headers.

2008-04-07  Alexei Sheplyakov  <varg@theor.jinr.ru>

	Re-establish 1.2.0 ABI, broken 2008-02-22:
	* src/float/input/cl_F_readparsed.cc: Add obsolete signature with index
	args uintL.
	* src/integer/input/cl_I_readparsed.cc: Likewise.
	* src/rational/input/cl_RA_readparsed.cc: Likewise.

2008-04-05  Richard B. Kreckel  <kreckel@ginac.de>

	* Version 1.2.2 released.

2008-04-04  Richard B. Kreckel  <kreckel@ginac.de>

	Re-establish ABI, broken 2008-01-20:
	* src/float/ffloat/conv/cl_FF_from_float.cc: Add obsolete signature of
	cl_float_to_FF_pointer.
	* src/float/dfloat/conv/cl_DF_from_double.cc: Add obsolete signature of
	cl_double_to_DF_pointer.

2008-03-31  Bruno Haible  <bruno@clisp.org>

	Fix hack from 2008-01-20 that broke on ARM.
	* src/float/ffloat/conv/cl_FF_from_float.cc (FAST_FLOAT): Remove.
	(cl_float_to_FF_pointer): Use anonymous union for conversion.
	* src/float/dfloat/conv/cl_DF_from_double.cc (FAST_DOUBLE): Remove.
	(cl_double_to_DF_pointer): Use anonymous union for conversion.

2008-03-24  Richard B. Kreckel  <kreckel@ginac.de>

	* Version 1.2.1 released.

2008-03-23  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: New file.
	* Makefile.devel (build-prerequisites): New target.
	(all): Depend on it.
	(EXCLUDE): Also exclude autogen.sh.

2008-03-23  Bruno Haible  <bruno@clisp.org>

	Make "make -jN" work again, broken on 2008-02-23.
	* src/Makefile.in (ALLOBJECTS_LO): Fix dependency.

2008-03-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/gmp.m4 (CL_LIBGMP): New macro brings support for --with-gmp=DIR...
	* configure.ac: ...used here.
	* doc/cln.texi: Document that new feature.