@@ -1,3 +1,8 @@
+2008-04-21  Richard B. Kreckel  <kreckel@ginac.de>
+
+	* src/base/cl_low.h: Fix sparc64 build with -DNO_ASM.
+	* include/cln/floatformat.h: Avoid compiler warning.
+
 2008-04-18  Bruno Haible  <bruno@clisp.org>
 
 	* src/integer/cl_I.h (FN_MSD1_mask, FN_MSD2_mask, FN_MSD3_mask):
